Revision history for Perl distribution Log-Any-Functions

0.02 - ??

 - Improvement to the POD syntax for the documentation

0.01 - 2024-04-24
 - Initial release